--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="px-4 py-4 max-w-6xl mx-auto container mt-20 px-2">
       <div class="lg:flex items-center">
         <div class="w-full text-center lg:text-left lg:w-2/3">
-          <div class="font-bold text-3xl"><span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-500 hover:from-blue-500 hover:to-green-400">AnukarOP</span>&nbsp;<span id="discord_status"></span></div>
+          <div class="font-bold text-3xl"><span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-500 hover:from-blue-500 hover:to-green-400">AnukarOP</span></div>
           <div class="font-semibold text-lg text-gray-500">
           { Programmer, Web Developer & Cyber Security Expert }
           </div>
