--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
   
    
     <div class="px-4 py-4 max-w-6xl mx-auto container mt-20 px-2">
-      <div class="lg:flex items-center">
-        <div class="w-full text-center lg:text-left lg:w-2/3">
-          <div class="font-bold text-3xl"><span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-500 hover:from-blue-500 hover:to-green-400">AnukarOP</span></div>
-          <div class="font-semibold text-lg text-gray-500">
-          { Programmer, Web Developer & Cyber Security Expert }
-          </div>
+  <div class="lg:flex items-center">
+    <div class="w-full text-center lg:text-left lg:w-2/3">
+      <div class="font-bold text-3xl">
+        <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-500 hover:from-blue-500 hover:to-green-400">AnukarOP</span>
+        <i class="fas fa-check-circle text-blue-500"></i>
+      </div>
+      <div class="font-semibold text-lg text-gray-500">
+        { Programmer, Web Developer & Cyber Security Expert }
+      </div>
+    </div>
+  </div>
+</div>
           <div class="sm:w-full md:w-4/5 lg:w-full mx-auto font-regular text-lg text-gray-600 mt-12">
             Hey, Myself Anukar, A young Web Developer & Cyber Security Expert!<br />
           
