--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <br />
           
             Contact via
-            <a rel="noopener noreferrer" href="https://github.com/AnukarOP/" class="twitter2 font-bold" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>&nbsp;<span class="discord2">@AnukarOP</span>&nbsp;<i class="fad fa-external-link"></i> </a>
+            <a rel="noopener noreferrer" href="https://github.com/AnukarOP/" class="twitter2 font-bold" target="_blank"> <i class="fab fa-github"></i>&nbsp;<span class="discord2">@AnukarOP</span>&nbsp;<i class="fad fa-external-link"></i> </a>
             &nbsp;&&nbsp;
             <a rel="noopener noreferrer" href="https://discord.com/users/1140475912849207358" class="font-bold" target="_blank"> <i class="fab fa-discord discord"></i>&nbsp;<span class="discord2">AnukarOP</span>&nbsp;<i class="fad fa-external-link"></i> </a>
           <br />
