--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             Contact via
             <a rel="noopener noreferrer" href="https://github.com/AnukarOP/" class="twitter2 font-bold" target="_blank"> <i class="fab fa-github"></i>&nbsp;<span class="discord2">@AnukarOP</span>&nbsp;<i class="fad fa-external-link"></i> </a>
             &nbsp;&&nbsp;
-            <a rel="noopener noreferrer" href="https://discord.com/users/1140475912849207358" class="font-bold" target="_blank"> <i class="fab fa-discord discord"></i>&nbsp;<span class="discord2">AnukarOP</span>&nbsp;<i class="fad fa-external-link"></i> </a>
+            <a rel="noopener noreferrer" href="https://telegram.me/AnukarOP" class="font-bold" target="_blank"> <i class="fab fa-discord telegram"></i>&nbsp;<span class="discord2">@AnukarOP</span>&nbsp;<i class="fad fa-external-link"></i> </a>
           <br />
 		  <br />
             
