--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             Contact via
             <a rel="noopener noreferrer" href="https://telegram.me/AnukarOP/" class="twitter2 font-bold" target="_blank"> <i class="fab fa-telegram"></i>&nbsp;<span class="discord2">@AnukarOP</span>&nbsp;<i class="fad fa-external-link"></i> </a>
             &nbsp;&&nbsp;
-            <a rel="noopener noreferrer" href="https://github.com/AnukarOP" class="font-bold" target="_blank"> <i class="fab fa-github"></i>&nbsp;<span class="discord2">@AnukarOP</span>&nbsp;<i class="fad fa-external-link"></i> </a>
+            <a rel="noopener noreferrer" href="https://github.com/AnukarOP" class="font-bold" target="_blank"> <i class="fab fa-github"></i>&nbsp;<span class="discord2">AnukarOP</span>&nbsp;<i class="fad fa-external-link"></i> </a>
           <br />
 		  <br />
             
@@ -71,19 +71,19 @@
 	      <!-- 0 -->
 	       <!--PreMiD Project-->
         <div class="px-6 sm:px-4 col mb-8 w-full md:w-1/2 lg:w-1/3">
-            <a rel="noopener noreferrer" href="https://aepp.online" target="_blank">
+            <a rel="noopener noreferrer" href="https://padhaku.xyz" target="_blank">
               <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
                 <div class="flex items-center">
                   <div class="flex-initial ml-4 mr-6">
-                    <img src="https://cdn.discordapp.com/attachments/834492774179012668/990194201637584906/unknown_1-modified.png" class="h-10 w-auto" alt="aepp" />
+                    <img src="https://i.ibb.co/Gc2yCyL/20230314-124139.jpg" class="h-10 w-auto" alt="aepp" />
                   </div>
                   <div class="flex-initial">
                     <div class="font-semibold text-md text-gray-600">
                       Web Developer
                     </div>
-                    <div class="font-bold text-xl text-blue-500">aepp.online</div>
+                    <div class="font-bold text-xl text-blue-500">padhaku.xyz</div>
                     <div class="font-regular text-xs text-gray-500">
-                      Online greek high school courses 
+                      Padhaku ~ Get Smarter with it
                     </div>
                   </div>
                 </div>
