--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
         </div>
 	         <!--dasu-->
         <div class="px-6 sm:px-4 col mb-8 w-full md:w-1/2 lg:w-1/3">
-            <a rel="noopener noreferrer" href="https://dasu.gg" target="_blank">
+            <a rel="noopener noreferrer" href="https://github.com/AnukarOP/Multi-CC" target="_blank">
               <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
                 <div class="flex items-center">
                   <div class="flex-initial ml-4 mr-6">
-                    <img src="https://cdn.discordapp.com/avatars/525748238255390721/8787f4919607add166979e0d9578b9fb.webp" class="rounded-md h-12 w-auto" alt="dasu logo" />
+                    <img src="https://i.ibb.co/FgYZH30/image.png" class="rounded-md h-12 w-auto" alt="Multi-CC" />
                   </div>
                   <div class="flex-initial">
                     <div class="font-semibold text-md text-gray-600">
-                        Marketing Specialist  
+                        Tools Developer
                       </div>
-                    <div class="font-bold text-xl text-blue-500">dasu.gg </div>
+                    <div class="font-bold text-xl text-blue-500">Multi-CC </div>
                     <div class="font-regular text-xs text-gray-500">
-                        Control your discord giveaways.
+                        Generate & Validate CC for bypassing
                     </div>
                   </div>
                 </div>
@@ -114,19 +114,19 @@
           </div>
 	       <!--ronin-->
         <div class="px-6 sm:px-4 col mb-8 w-full md:w-1/2 lg:w-1/3">
-          <a rel="noopener noreferrer" href="https://kathigitis-aepp.gr" target="_blank">
+          <a rel="noopener noreferrer" href="https://github.com/AnukarOP/Nitro-Checker-and-Generator" target="_blank">
             <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
               <div class="flex items-center">
                 <div class="flex-initial ml-4 mr-6">
-                  <img src="https://cdn.discordapp.com/attachments/1010482046398902373/1038346804791627776/fav3.png" class="rounded-md h-12 w-auto" alt="IBL Logo" />
+                  <img src="https://i.ibb.co/6gMZBV2/image.png" class="rounded-md h-12 w-auto" alt="Nitro Logo" />
                 </div>
                 <div class="flex-initial">
                     <div class="font-semibold text-md text-gray-600">
-                       Website Maintainer
+                       Tools Developer
                       </div>
-                  <div class="font-bold text-xl text-blue-500">kathigitis-aepp.gr</div>
+                  <div class="font-bold text-xl text-blue-500">Nitro Checker & Gen.</div>
                   <div class="font-regular text-xs text-gray-500">
-                    Third Party Personal Blog
+                    Generate Unlimited Discord Nitros & Check them also.
                   </div>
                 </div>
               </div>
