--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
               <div class="flex items-center">
                 <div class="flex-initial ml-4 mr-6">
-                  <img src="https://i.ibb.co/6gMZBV2/image.png" class="rounded-md h-12 w-auto" alt="Nitro Logo" />
+                  <img src="https://i.ibb.co/vwVhK2v/image.png" class="rounded-md h-12 w-auto" alt="Nitro Logo" />
                 </div>
                 <div class="flex-initial">
                     <div class="font-semibold text-md text-gray-600">
