--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
                 <div class="flex items-center">
                   <div class="flex-initial ml-4 mr-6">
-                    <img src="https://i.ibb.co/FgYZH30/image.png" class="rounded-md h-12 w-auto" alt="Multi-CC" />
+                    <img src="https://i.ibb.co/TH0M1p2/image.png" class="rounded-md h-12 w-auto" alt="Multi-CC" />
                   </div>
                   <div class="flex-initial">
                     <div class="font-semibold text-md text-gray-600">
@@ -136,19 +136,19 @@
         
          
         <div class="px-6 sm:px-4 col mb-8 w-full md:w-1/2 lg:w-1/3">
-          <a rel="noopener noreferrer" href="https://formie.pro" target="_blank">
+          <a rel="noopener noreferrer" href="https://github.com/AnukarOP/Unlimited-Quotes-Generator" target="_blank">
             <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
               <div class="flex items-center">
                 <div class="flex-initial ml-4 mr-6">
-                  <img src="https://cdn.discordapp.com/attachments/955467053425369191/990203596740104222/CompressJPEG.online_512x512-image.png" class="rounded-md h-12 w-auto" alt="IBL Logo" />
+                  <img src="https://i.ibb.co/gVqPbx2/image.png" class="rounded-md h-12 w-auto" alt="IBL Logo" />
                 </div>
                 <div class="flex-initial">
                     <div class="font-semibold text-md text-gray-600">
-                       DevOp
+                       Web Expert 
                       </div>
-                  <div class="font-bold text-xl text-blue-500">formie.pro</div>
+                  <div class="font-bold text-xl text-blue-500">Quotes-Generator</div>
                   <div class="font-regular text-xs text-gray-500">
-                    Control your discord applications.
+                    Generate Unlimited Quotes per 10sec. Automatically!
                   </div>
                 </div>
               </div>
