--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="font-semibold text-md text-gray-600">
                        Web-App Developer
                       </div>
-                  <div class="font-bold text-xl text-blue-500">discord.com</div>
+                  <div class="font-bold text-xl text-blue-500">ManageitUP</div>
                   <div class="font-regular text-xs text-gray-500">
                     Manage your Daily Tasks Easily & Efficiently with ManageitUP
                   </div>
@@ -210,7 +210,7 @@
                     <div class="font-semibold text-md text-gray-600">
                        Bots Developer
                       </div>
-                  <div class="font-bold text-xl text-blue-500">tickety.top</div>
+                  <div class="font-bold text-xl text-blue-500">Bot Expert</div>
                   <div class="font-regular text-xs text-gray-500">
                     Developed Many Telegram bots, i.e Music bot, Group Management bots, AI bots and Many more...
                   </div>
@@ -223,19 +223,19 @@
         
 
         <div class="px-6 sm:px-4 col mb-8 w-full md:w-1/2 lg:w-1/3">
-          <a rel="noopener noreferrer" href="https://botdesignerdiscord.com/" target="_blank">
+          <a rel="noopener noreferrer" href="https://github.com/AnukarOP" target="_blank">
             <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
               <div class="flex items-center">
                 <div class="flex-initial ml-4 mr-6">
-                  <img src="https://cdn.discordapp.com/attachments/592065191248658452/1027565662849204264/unnamed.png" class="rounded-md h-12 w-auto" alt="IBL Logo" />
+                  <img src="https://i.ibb.co/tJx0nND/image.png" class="rounded-md h-12 w-auto" alt="Cyber expert Logo" />
                 </div>
                 <div class="flex-initial">
                     <div class="font-semibold text-md text-gray-600">
-                       Safety Engineer
+                       Cyber Security Expert
                       </div>
-                  <div class="font-bold text-xl text-blue-500">BDFD</div>
+                  <div class="font-bold text-xl text-blue-500">Cyber Expert</div>
                   <div class="font-regular text-xs text-gray-500">
-                    Bot maker app for IOS & Android.
+                    Founded Many Bugs & Vulnerabilities in Top sites...
                   </div>
                 </div>
               </div>
@@ -243,19 +243,19 @@
           </a>
         </div>
  <div class="px-6 sm:px-4 col mb-8 w-full md:w-1/2 lg:w-1/3">
-          <a rel="noopener noreferrer" href="https://polywork.com/archolek" target="_blank">
+          <a rel="noopener noreferrer" href="https://github.com/AnukarOP" target="_blank">
             <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
               <div class="flex items-center">
                 <div class="flex-initial ml-4 mr-6">
-                  <img src="https://asset.brandfetch.io/idNBXwW0oc/idryUyCDc2.png" class="rounded-md h-12 w-auto" alt="IBL Logo" />
+                  <img src="https://i.ibb.co/42q3xHy/image.png" class="rounded-md h-12 w-auto" alt="IBL Logo" />
                 </div>
                 <div class="flex-initial">
                     <div class="font-semibold text-md text-gray-600">
-                       Beta Tester, Volunteer
+                       Data Breach Expert
                       </div>
-                  <div class="font-bold text-xl text-blue-500">poly.work</div>
+                  <div class="font-bold text-xl text-blue-500">Breach eXpert</div>
                   <div class="font-regular text-xs text-gray-500">
-                    It's important the world knows you..
+                    Breached Some Famous Website's or Countries database...
                   </div>
                 </div>
               </div>
@@ -264,19 +264,19 @@
         </div>
        
         <div class="px-6 sm:px-4 col mb-8 w-full md:w-1/2 lg:w-1/3">
-          <a rel="noopener noreferrer" href="https://droplet.gg" target="_blank">
+          <a rel="noopener noreferrer" href="https://qr-codes-generator.vercel.app/" target="_blank">
             <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
               <div class="flex items-center">
                 <div class="flex-initial ml-4 mr-6">
-                  <img src="https://cdn.discordapp.com/avatars/550613223733329920/abf91fab46c14fedd8c795124b1226f1.png?size=1024" class="rounded-md h-12 w-auto" alt="IBL Logo" />
+                  <img src="https://i.ibb.co/gjfC54T/image.png" class="rounded-md h-12 w-auto" alt="IBL Logo" />
                 </div>
                 <div class="flex-initial">
                     <div class="font-semibold text-md text-gray-600">
-                       Affiliate Developer
+                       Tools Developer
                       </div>
-                  <div class="font-bold text-xl text-blue-500">Droplet Development</div>
+                  <div class="font-bold text-xl text-blue-500">Qr Codes Generator</div>
                   <div class="font-regular text-xs text-gray-500">
-                    The home of Reaction Roles.
+                    Qr Codes Generator, Made using Html5, Tailwind CCS & Js...
                   </div>
                 </div>
               </div>
