--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <div class="font-semibold text-md text-gray-600">
                        Tools Developer
                       </div>
-                  <div class="font-bold text-xl text-blue-500">Qr Codes Generator</div>
+                  <div class="font-bold text-xl text-blue-500">Qr-Codes-Generator</div>
                   <div class="font-regular text-xs text-gray-500">
                     Qr Codes Generator, Made using Html5, Tailwind CCS & Js...
                   </div>
@@ -350,11 +350,11 @@
           <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
             <div class="flex items-center">
               <div class="flex-initial ml-4 mr-6">
-                <img width="39" height="48" src = "https://upload.wikimedia.org/wikipedia/commons/1/18/C_Programming_Language.svg" alt="My Happy SVG"/>
+                <img width="39" height="48" src = "https://i.ibb.co/tMT5XNX/image.png" alt="My Happy PNG"/>
             </div>
             </div>
             <div class="flex-initial">
-              <div class="font-bold text-lg text-white">C Lang</div>
+              <div class="font-bold text-lg text-white">React</div>
             </div>
           </div>
         </div>
@@ -377,11 +377,11 @@
           <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
             <div class="flex items-center">
               <div class="flex-initial ml-4 mr-6">
-                <img width="39" height="48" src = "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/Finder_Icon_macOS_Big_Sur.png/800px-Finder_Icon_macOS_Big_Sur.png" alt="My Happy SVG"/>
+                <img width="39" height="48" src = "https://i.ibb.co/64J07XD/image.png" alt="My Happy PNG"/>
             </div>
             </div>
             <div class="flex-initial">
-              <div class="font-bold text-lg text-white">MacOS</div>
+              <div class="font-bold text-lg text-white">Vue</div>
             </div>
           </div>
         </div>
@@ -394,7 +394,7 @@
             </div>
             </div>
             <div class="flex-initial">
-              <div class="font-bold text-lg text-white">Canvas</div>
+              <div class="font-bold text-lg text-white">Canva</div>
             </div>
           </div>
         </div>
@@ -439,7 +439,7 @@
                 </svg>
               </div>
               <div class="flex-initial">
-                <div class="font-bold text-lg text-white">TailwindCSS</div>
+                <div class="font-bold text-lg text-white">Tailwind CSS</div>
               </div>
             </div>
           </div>
@@ -620,17 +620,11 @@
           <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
             <div class="flex items-center">
               <div class="flex-initial ml-4 mr-6">
-                <svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-8 w-auto">
-                  <path d="M7.25 19c1.794 0 3.25-1.344 3.25-3v-3H7.25c-1.793 0-3.249 1.344-3.249 3s1.456 3 3.25 3z" fill="#0ACF83"></path>
-                  <path d="M4.001 10c0-1.656 1.456-3 3.25-3H10.5v6H7.25c-1.793 0-3.249-1.344-3.249-3z" fill="#A259FF"></path>
-                  <path d="M4.002 4c0-1.656 1.455-3 3.249-3h3.25v6H7.25C5.457 7 4 5.656 4 4z" fill="#F24E1E"></path>
-                  <path d="M10.5 1h3.25c1.793 0 3.249 1.344 3.249 3s-1.456 3-3.25 3H10.5V1z" fill="#FF7262"></path>
-                  <path d="M16.999 10c0 1.656-1.456 3-3.25 3-1.793 0-3.249-1.344-3.249-3s1.456-3 3.25-3c1.793 0 3.249 1.344 3.249 3z" fill="#1ABCFE"></path>
-                </svg>
-              </div>
-              <div class="flex-initial">
-                <div class="font-bold text-lg text-white">Figma</div>
-              </div>
+                <img width="39" height="48" src = "https://i.ibb.co/64J07XD/image.png" alt="My Happy PNG"/>
+            </div>
+            </div>
+            <div class="flex-initial">
+              <div class="font-bold text-lg text-white">Vercel</div>
             </div>
           </div>
         </div>
