--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	  <!-- Ezoic Code -->
 	
     <!--Title-->
-    <title>Hello World!</title>
+    <title>AnukarOP's Personal Portfolio Site | Know About Me, Myself & I</title>
     <link rel="icon" type="image/png" href="https://i.ibb.co/cXY6fjr/image.png" />
 
     <!--TailwindCSS , Font Awesome & Twitter Emojis-->
@@ -345,12 +345,12 @@
             </div>
           </div>
         </div>
-        <!-- C -->
+        <!-- React -->
         <div class="px-6 sm:px-4 col mb-8 w-full md:w-1/2 lg:w-1/4">
           <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
             <div class="flex items-center">
               <div class="flex-initial ml-4 mr-6">
-                <img width="39" height="48" src = "https://i.ibb.co/tMT5XNX/image.png" alt="My Happy PNG"/>
+                <img width="39" height="48" src = "https://i.ibb.co/RTTrcZQ/image.png" alt="My Happy PNG"/>
             </div>
             </div>
             <div class="flex-initial">
@@ -664,7 +664,7 @@
         Availability <span class="bg-red-500 text-white rounded-sm text-sm p-1 lowercase italic">Unavailable</span>, <span class="bg-green-500 text-white rounded-sm text-sm p-1 lowercase italic">Available</span>
       </div>
       <div class="grid md:grid-cols-3 grid-cols-1 gap-10 ">
-      <div class="rounded-md p-6 sm:px-4 col mb-8 w-full mx-auto font-semibold text-lg flex items-center justify-center hidden md:inline" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://cdn.discordapp.com/banners/830323955633618974/50406efdfe3162dbd2f49d132e30abfb.webp?size=300)">
+      <div class="rounded-md p-6 sm:px-4 col mb-8 w-full mx-auto font-semibold text-lg flex items-center justify-center hidden md:inline" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.ibb.co/3Ms9zLS/Dark-and-Dynamic-Etched-Textured-Background-Coming-Soon-Banner.png)">
 
       </div>
         <div class="rounded-md p-6 sm:px-4 col mb-8 w-full mx-auto font-semibold text-lg flex items-center justify-center" style="background-color: #0e141d;">
@@ -688,7 +688,7 @@
               <div class="bg-red-500 rounded-sm"></div>
               <div class="bg-red-500 rounded-sm"></div>
               <div class="bg-green-500 rounded-sm"></div>
-              <div class="bg-green-500 rounded-sm"></div>
+              <div class="bg-red-500 rounded-sm"></div>
             </div>
             <div class="grid grid-cols-8 gap-3 content-center">
               <span>🌇</span>
@@ -708,19 +708,19 @@
               <div class="bg-red-500 rounded-sm"></div>
               <div class="bg-red-500 rounded-sm"></div>
               <div class="bg-red-500 rounded-sm"></div>
-              <div class="bg-red-500 rounded-sm"></div>
+              <div class="bg-green-500 rounded-sm"></div>
             </div>
          </div>
         </div>
       </div>
-        <div class="rounded-md p-6 sm:px-4 col mb-8 w-full mx-auto font-semibold text-lg flex items-center justify-center hidden md:inline" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://cdn.discordapp.com/banners/830323955633618974/50406efdfe3162dbd2f49d132e30abfb.webp?size=300)">
+        <div class="rounded-md p-6 sm:px-4 col mb-8 w-full mx-auto font-semibold text-lg flex items-center justify-center hidden md:inline" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.ibb.co/3Ms9zLS/Dark-and-Dynamic-Etched-Textured-Background-Coming-Soon-Banner.png)">
 
         </div>
       </div>
       <br />
         <p class="center font-medium text-lg inter text-white">
            <center>
-            <a rel="noopener noreferrer" href="#"><span class="font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-green-400 hover:from-pink-500 hover:to-purple-400">Copyright Nxveed#0250 &nbsp;© 2023</span></a>
+            <a rel="noopener noreferrer" href="#"><span class="font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-green-400 hover:from-pink-500 hover:to-purple-400">Copyright AnukarOP &nbsp;© 2023</span></a>
 		       </center> 
         </p>
           <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"></script>
