--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
         Availability <span class="bg-red-500 text-white rounded-sm text-sm p-1 lowercase italic">Unavailable</span>, <span class="bg-green-500 text-white rounded-sm text-sm p-1 lowercase italic">Available</span>
       </div>
       <div class="grid md:grid-cols-3 grid-cols-1 gap-10 ">
-      <div class="rounded-md p-6 sm:px-4 col mb-8 w-full mx-auto font-semibold text-lg flex items-center justify-center hidden md:inline" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.ibb.co/3Ms9zLS/Dark-and-Dynamic-Etched-Textured-Background-Coming-Soon-Banner.png)">
+      <div class="rounded-md p-6 sm:px-4 col mb-8 w-full mx-auto font-semibold text-lg flex items-center justify-center hidden md:inline" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.ibb.co/3Ms9zLS/Dark-and-Dynamic-Etched-Textured-Background-Coming-Soon-Banner.png?size=300)">
 
       </div>
         <div class="rounded-md p-6 sm:px-4 col mb-8 w-full mx-auto font-semibold text-lg flex items-center justify-center" style="background-color: #0e141d;">
@@ -713,7 +713,7 @@
          </div>
         </div>
       </div>
-        <div class="rounded-md p-6 sm:px-4 col mb-8 w-full mx-auto font-semibold text-lg flex items-center justify-center hidden md:inline" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.ibb.co/3Ms9zLS/Dark-and-Dynamic-Etched-Textured-Background-Coming-Soon-Banner.png)">
+        <div class="rounded-md p-6 sm:px-4 col mb-8 w-full mx-auto font-semibold text-lg flex items-center justify-center hidden md:inline" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.ibb.co/3Ms9zLS/Dark-and-Dynamic-Etched-Textured-Background-Coming-Soon-Banner.png?size=300)">
 
         </div>
       </div>
