--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                       </div>
                   <div class="font-bold text-xl text-blue-500">Qr-Codes-Generator</div>
                   <div class="font-regular text-xs text-gray-500">
-                    Qr Codes Generator, Made using Html5, Tailwind CCS & Js...
+                    Qr Codes Generator, Made using Html5, Tailwind CSS & Js...
                   </div>
                 </div>
               </div>
