--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	  <!-- Ezoic Code -->
 	
     <!--Title-->
-    <title>AnukarOP's Personal Portfolio Site | Know About Me, Myself & I</title>
+    <title>Anukar's Personal Portfolio Site | Know About Me, Myself & I</title>
     <link rel="icon" type="image/png" href="https://i.ibb.co/cXY6fjr/image.png" />
 
     <!--TailwindCSS , Font Awesome & Twitter Emojis-->
@@ -71,7 +71,7 @@
 	      <!-- 0 -->
 	       <!--PreMiD Project-->
         <div class="px-6 sm:px-4 col mb-8 w-full md:w-1/2 lg:w-1/3">
-            <a rel="noopener noreferrer" href="https://padhaku.xyz" target="_blank">
+            <a rel="noopener noreferrer" href="www.padhaku.info" target="_blank">
               <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
                 <div class="flex items-center">
                   <div class="flex-initial ml-4 mr-6">
@@ -81,7 +81,7 @@
                     <div class="font-semibold text-md text-gray-600">
                       Web Developer
                     </div>
-                    <div class="font-bold text-xl text-blue-500">padhaku.xyz</div>
+                    <div class="font-bold text-xl text-blue-500">Padhaku.info</div>
                     <div class="font-regular text-xs text-gray-500">
                       Padhaku ~ Get Smarter with it
                     </div>
