--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	      <!-- 0 -->
 	       <!--PreMiD Project-->
         <div class="px-6 sm:px-4 col mb-8 w-full md:w-1/2 lg:w-1/3">
-            <a rel="noopener noreferrer" href="www.padhaku.info" target="_blank">
+            <a rel="noopener noreferrer" href="https://www.padhaku.info" target="_blank">
               <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
                 <div class="flex items-center">
                   <div class="flex-initial ml-4 mr-6">
