--- a/index.html
+++ b/index.html
@@ -266,19 +266,19 @@
           </a>
         </div>
  <div class="px-6 sm:px-4 col mb-8 w-full md:w-1/2 lg:w-1/3">
-          <a rel="noopener noreferrer" href="https://github.com/AnukarOP" target="_blank">
+          <a rel="noopener noreferrer" href="https://chromewebstore.google.com/detail/youtube-custom-playback/aajebebekipgngebidcakkcckkagfikj?authuser=0&hl=en-GB" target="_blank">
             <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
               <div class="flex items-center">
                 <div class="flex-initial ml-4 mr-6">
-                  <img src="https://i.ibb.co/42q3xHy/image.png" class="rounded-md h-12 w-auto" alt="IBL Logo" />
+                  <img src="https://i.ibb.co/k652B2NS/icon48.png" class="rounded-md h-12 w-auto" alt="IBL Logo" />
                 </div>
                 <div class="flex-initial">
                     <div class="font-semibold text-md text-gray-600">
-                       Data Breach Expert
+                       Extension Developer
                       </div>
-                  <div class="font-bold text-xl text-blue-500">Breach eXpert</div>
+                  <div class="font-bold text-xl text-blue-500">Youtube Custom Playback</div>
                   <div class="font-regular text-xs text-gray-500">
-                    Breached Some Famous Website's or Countries database...
+                    Adds custom Playback to your videos from 2.25x to 16x.
                   </div>
                 </div>
               </div>
