--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
                     <div class="font-semibold text-md text-gray-600">
                        Extension Developer
                       </div>
-                  <div class="font-bold text-xl text-blue-500">Youtube Custom Playback</div>
+                  <div class="font-bold text-xl text-blue-500">Custom Playback</div>
                   <div class="font-regular text-xs text-gray-500">
-                    Adds custom Playback to your videos from 2.25x to 16x.
+                    Adds custom playback to your Youtube videos from 2.25x to 16x.
                   </div>
                 </div>
               </div>
