--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           </a>
         </div>
  <div class="px-6 sm:px-4 col mb-8 w-full md:w-1/2 lg:w-1/3">
-          <a rel="noopener noreferrer" href="https://chromewebstore.google.com/detail/youtube-custom-playback/aajebebekipgngebidcakkcckkagfikj?authuser=0&hl=en-GB" target="_blank">
+          <a rel="noopener noreferrer" href="https://youtube-playback.space" target="_blank">
             <div class="flex items-center px-6 py-4 transform hover:scale-105 duration-200 shadow rounded-md px-6 sm:px-4 hover:bg-gray-100 cursor-pointer" style="background-color: #0e141d; border-radius: 1vw;">
               <div class="flex items-center">
                 <div class="flex-initial ml-4 mr-6">
@@ -276,7 +276,7 @@
                     <div class="font-semibold text-md text-gray-600">
                        Extension Developer
                       </div>
-                  <div class="font-bold text-xl text-blue-500">Custom Playback</div>
+                  <div class="font-bold text-xl text-blue-500">Youtube Playback</div>
                   <div class="font-regular text-xs text-gray-500">
                     Adds custom playback to your Youtube videos from 2.25x to 16x.
                   </div>
