--- a/http-hawk/privacy.html
+++ b/http-hawk/privacy.html
@@ -188,7 +188,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="https://anukar.tech/httphawk-icon.png" alt="HTTP Hawk" class="logo-img">
+            <img src="./httphawk-icon.png" alt="HTTP Hawk" class="logo-img">
             <h1>HTTP Hawk</h1>
             <p class="subtitle">Privacy Policy</p>
         </header>
