--- a/http-hawk/privacy.html
+++ b/http-hawk/privacy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTTP Hawk - Privacy Policy</title>
+    <link rel="icon" href="./httphawk-icon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -284,15 +285,15 @@
                 Got questions? Concerns? Just want to say hi? We'd love to hear from you!
             </p>
             <div style="text-align: center;">
-                <a href="https://anukar.tech" target="_blank" class="contact-link">Visit Anukar.tech</a>
+                <a href="mail:help@anukar.tech" target="_blank" class="contact-link">help@anukar.tech</a>
             </div>
         </div>
 
         <p class="last-updated">Last Updated: January 22, 2026</p>
 
         <footer>
-            <p>Made with ❤️ by <a href="https://anukar.tech" target="_blank">Anukar.tech</a></p>
-            <p style="margin-top: 10px;">HTTP Hawk - Catch and edit HTTP requests on the fly 🦅</p>
+            <p>Made with ❤️ by <a href="https://anukar.tech" target="_blank">Anukar.</a></p>
+            <p style="margin-top: 10px;">HTTP Hawk - Catch and edit HTTP requests easily.</p>
         </footer>
     </div>
 </body>
