--- a/http-hawk/index.html
+++ b/http-hawk/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTTP Hawk - Request Interceptor</title>
-    <link rel="icon" type="image/png" href="icons/icon48.png">
+    <link rel="icon" type="image/png" href="./httphawk-icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -257,11 +257,11 @@
 <body>
     <header>
         <div class="logo-nav">
-            <img src="icons/icon48.png" alt="HTTP Hawk">
+            <img src="./httphawk-icon.png" alt="HTTP Hawk">
             <span>HTTP Hawk</span>
         </div>
         <nav>
-            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="http-hawk/privacy-policy.html">Privacy Policy</a>
         </nav>
     </header>
 
@@ -280,7 +280,7 @@
                 </svg>
                 Add to Chrome
             </a>
-            <a href="privacy-policy.html" class="btn-secondary">
+            <a href="httpp-hawk/privacy-policy.html" class="btn-secondary">
                 Privacy Policy
             </a>
         </div>
@@ -306,8 +306,8 @@
 
     <footer>
         <div class="footer-links">
-            <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="mailto:contact@anukar.tech">Contact</a>
+            <a href="http-hawk/privacy-policy.html">Privacy Policy</a>
+            <a href="mailto:help@anukar.tech">Contact</a>
         </div>
         <div class="copyright">
             Made with ❤️ by <a href="https://anukar.tech" target="_blank">Anukar.tech</a>
