--- a/http-hawk/index.html
+++ b/http-hawk/index.html
@@ -267,7 +267,7 @@
 
     <main>
         <div class="icon-container">
-            <img src="icons/icon128.png" alt="HTTP Hawk Icon">
+            <img src="./httphawk-icon.png" alt="HTTP Hawk Icon">
         </div>
 
         <h1>HTTP <span>Hawk</span></h1>
