--- a/index.html
+++ b/index.html
@@ -1658,7 +1658,7 @@
         <div class="playground-header fade-in">
           <p class="section-label">Interactive</p>
           <h2 class="section-title">Your Playground</h2>
-          <p class="playground-hint">🎮 Play around! Draw, drag, type - it's all yours. Refreshing resets everything!</p>
+          <p class="playground-hint">🎮 Lets do drag, draw, type...</p>
         </div>
 
         <div class="playground-grid">
@@ -1807,8 +1807,8 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <p class="footer-text">© 2026 AnukarOP</p>
-      <p class="footer-sub">Crafted with precision</p>
+      <p class="footer-text">© 2026 Anukar</p>
+      <p class="footer-sub">Crafted with Love.</p>
     </footer>
 
     <!-- Back to Top -->
