--- a/http-hawk/index.html
+++ b/http-hawk/index.html
@@ -274,7 +274,7 @@
         <p class="tagline">Catch and edit HTTP requests on the fly. No proxy setup needed. Just click and intercept.</p>
 
         <div class="cta-container">
-            <a href="https://chrome.google.com/webstore" class="btn-primary" target="_blank">
+            <a href="https://chromewebstore.google.com/detail/http-hawk-request-interce/dblcjncomiagdhnpndchbddeopmncflm" class="btn-primary" target="_blank">
                 <svg viewBox="0 0 24 24" fill="currentColor">
                     <path d="M12 0C8.21 0 4.831 1.757 2.632 4.501l3.953 6.848A5.454 5.454 0 0 1 12 6.545h10.691A12 12 0 0 0 12 0zM1.931 5.47A11.943 11.943 0 0 0 0 12c0 6.012 4.42 10.991 10.189 11.864l3.953-6.847a5.45 5.45 0 0 1-6.865-2.29zm13.342 2.166a5.446 5.446 0 0 1 1.45 7.09l.002.001h-.002l-3.952 6.848a12.014 12.014 0 0 0 9.229-9.006zM12 16.364a4.364 4.364 0 1 1 0-8.728 4.364 4.364 0 0 1 0 8.728z"/>
                 </svg>
