--- a/http-hawk/index.html
+++ b/http-hawk/index.html
@@ -261,7 +261,7 @@
             <span>HTTP Hawk</span>
         </div>
         <nav>
-            <a href="http-hawk/privacy-policy.html">Privacy Policy</a>
+            <a href="./privacy-policy.html">Privacy Policy</a>
         </nav>
     </header>
 
@@ -280,7 +280,7 @@
                 </svg>
                 Add to Chrome
             </a>
-            <a href="http-hawk/privacy-policy.html" class="btn-secondary">
+            <a href="./privacy-policy.html" class="btn-secondary">
                 Privacy Policy
             </a>
         </div>
@@ -306,7 +306,7 @@
 
     <footer>
         <div class="footer-links">
-            <a href="http-hawk/privacy-policy.html">Privacy Policy</a>
+            <a href="./privacy-policy.html">Privacy Policy</a>
             <a href="mailto:help@anukar.tech">Contact</a>
         </div>
         <div class="copyright">
