--- a/index.html
+++ b/index.html
@@ -134,6 +134,17 @@
           "position": 3,
           "item": {
             "@type": "SoftwareApplication",
+            "name": "HTTP Hawk",
+            "description": "Catch and edit HTTP requests on the fly.",
+            "url": "https://anukar.tech/http-hawk",
+            "applicationCategory": "BrowserExtension"
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 4,
+          "item": {
+            "@type": "SoftwareApplication",
             "name": "YouTube Playback",
             "description": "Custom playback speeds from 2.25x to 16x.",
             "url": "https://youtube-playback.space",
@@ -1504,12 +1515,12 @@
             <div class="project-arrow"><i class="fas fa-arrow-right"></i></div>
           </a>
 
-          <a href="https://github.com/AnukarOP" target="_blank" class="glass-card project-card fade-in">
+          <a href="https://anukar.tech/http-hawk" target="_blank" class="glass-card project-card fade-in">
             <div class="content">
-              <div class="project-icon"><img src="https://i.ibb.co/tJx0nND/image.png" alt="Cyber" /></div>
-              <p class="project-role">Security Expert</p>
-              <h3 class="project-title">Cyber Expert</h3>
-              <p class="project-desc">Found Bugs & Vulnerabilities in top websites.</p>
+              <div class="project-icon"><img src="https://i.ibb.co/p6C3xdJ8/httphawk-icon.png" alt="Hawk" /></div>
+              <p class="project-role">Extension Developer</p>
+              <h3 class="project-title">HTTP Hawk</h3>
+              <p class="project-desc">Catch and edit HTTP requests on the fly.</p>
             </div>
             <div class="project-arrow"><i class="fas fa-arrow-right"></i></div>
           </a>
