--- a/hyper-cursor/privacy-policy.html
+++ b/hyper-cursor/privacy-policy.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy - Hyper Cursor</title>
+  <link rel="icon" href="https://i.ibb.co/gbkCR5vJ/icon128.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
