--- a/hyper-cursor/index.html
+++ b/hyper-cursor/index.html
@@ -1546,7 +1546,7 @@
               <li><strong>No network requests</strong> — The extension works 100% offline</li>
               <li><strong>Local storage only</strong> — Your preferences are saved locally on your device</li>
             </ul>
-            <p>Read our full <a href="privacy-policy.html" style="color: var(--neon-cyan);">Privacy Policy</a> for more details.</p>
+            <p>Read our full <a href="./privacy-policy.html" style="color: var(--neon-cyan);">Privacy Policy</a> for more details.</p>
           </div>
         </div>
       </div>
