--- a/hyper-cursor/index.html
+++ b/hyper-cursor/index.html
@@ -1625,7 +1625,7 @@
       Made with ❤️ by <span>Anukar.tech</span>
     </div>
     <div class="footer-links">
-      <a href="privacy-policy.html">Privacy Policy</a>
+      <a href="./privacy-policy.html">Privacy Policy</a>
       <a href="#" onclick="openContactModal(); return false;">Contact</a>
     </div>
   </footer>
