Update Privacy Policy link to new path

--- a/hyper-cursor/index.html
+++ b/hyper-cursor/index.html
@@ -1546,7 +1546,7 @@
               <li><strong>No network requests</strong> — The extension works 100% offline</li>
               <li><strong>Local storage only</strong> — Your preferences are saved locally on your device</li>
             </ul>
-            <p>Read our full <a href="./privacy-policy.html" style="color: var(--neon-cyan);">Privacy Policy</a> for more details.</p>
+            <p>Read our full <a href="./hyper-cursor/privacy-policy.html" style="color: var(--neon-cyan);">Privacy Policy</a> for more details.</p>
           </div>
         </div>
       </div>
@@ -1625,7 +1625,7 @@
       Made with ❤️ by <span>Anukar.tech</span>
     </div>
     <div class="footer-links">
-      <a href="./privacy-policy.html">Privacy Policy</a>
+      <a href="./hyper-cursor/privacy-policy.html">Privacy Policy</a>
       <a href="#" onclick="openContactModal(); return false;">Contact</a>
     </div>
   </footer>
