--- a/hyper-cursor/privacy-policy.html
+++ b/hyper-cursor/privacy-policy.html
@@ -205,7 +205,7 @@
 
   <div class="container">
     <div class="header">
-      <a href="landing-page.html" class="logo">HYPER CURSOR</a>
+      <a href="#" class="logo">HYPER CURSOR</a>
       <h1>Privacy Policy</h1>
       <p class="last-updated">Last Updated: January 30, 2026</p>
     </div>
